# sshr

./: Cargo.toml  LICENSE  README.md  flake.nix  justfile
kitty/: smart_close.py  smart_launch.py
shpool/: build.sh
src/: cmd.rs  kitty.rs  main.rs  probe.rs  reconnect.rs  session.rs  ssh.rs  upload.rs
